# ripi

./: CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  bors.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md  bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
config/: cliff.toml
scripts/: install.sh  release.sh  remove.sh
src/xcore/: core.rs
