[package]
name = "ripi"
version = "0.0.0"
description = "Rip an ISO from media."
authors = ["xTekC"]
repository = "https://github.com/xTekC/ripi"
readme = "README.md"
homepage = "https://github.com/xTekC/ripi"
documentation = "https://github.com/xTekC/ripi/blob/main/README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["cli", "async"]
# default-run = "ripi -h"
publish = false
# include = "[...]"
# exclude = "[...]"
# workspace = "..."
# links = "..."
# build = "build.rs"
rust-version = "1.73.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "ripi"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
indicatif = "0.17.7"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

# [dev-dependencies]


# [build-dependencies]


[profile.rel-opt]
inherits = "release"
opt-level = "s"
lto = true
codegen-units = 1
strip = true
